# gpt_fine_tuning

./: .gitignore  .pre-commit-config.yaml  Chat_finetuning_data_prep.ipynb  environments.yaml  fine_tuning.py  format_qa.py  gen_dataset.py  gen_question.py  gtm_podcast.txt  hyi_podcast.txt  kp_podcast.txt  pyproject.toml  test.jsonl  test_conversation.jsonl  侯友宜_dataset.txt  柯文哲_dataset_chatglm.jsonl  郭台銘_dataset.txt
src/: file_retrieve.py  fine_tune_dataset.py  fine_tuning.py  gen_dataset.py  侯友宜_dataset_gpt_1019.jsonl  柯文哲_dataset_chatglm.jsonl  柯文哲_dataset_gpt_0915.jsonl  柯文哲_dataset_gpt_0925.jsonl  郭台銘_dataset_gpt_1019.jsonl
